setup/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-grafana-ingress
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: prometheus-grafana
      port:
        name: http-web
  ingressClassName: tailscale
  tls:
  - hosts:
    - prometheus-grafana
